Sat Feb 24 17:03:47 UTC 2007  Steve Huston  <shuston@riverace.com>

        * examples/NT_Service/main.cpp: Fix unused arg warnings for builds
          without NT Services.

Sat Feb 24 09:01:19 UTC 2007  Ossama Othman  <ossama_othman at symantec dot com>

        * ace/config-linux.h:

          AIO support pulls in the rt library, which pulls in the pthread
          library.  Disable AIO in single-threaded builds.

        * tests/Recursive_Mutex_Test.cpp:

          Check if ACE_Recursive_Thread_Mutex::get_nesting_level() is
          supported before attempting to use it.

Sat Feb 24 08:34:08 UTC 2007  Olli Savia  <ops@iki.fi>

        * ace/config-openvms.h:
        * ace/config-qnx-rtp-62x.h:
        * ace/config-qnx-rtp-pre62x.h:
          Added ACE_LACKS_ALPHASORT.

Fri Feb 23 23:10:17 UTC 2007  Ossama Othman  <ossama_othman at symantec dot com>

        * tests/Recursive_Mutex_Test.cpp (test_recursion_depth):

          Issue error messages instead of assert()ing.  VxWorks builds
          will hang on a crash.  Thanks to Johnny for pointing this out.

Fri Feb 23 19:24:30 USMST 2007  Yan Dai  <dai_y@ociweb.com>

        * performance-tests/SCTP/SOCK_SEQPACK_srv.cpp:

          Made run_server() and other functions and structures only compiled
          when ACE_HAS_SCTP is defined. This should resolve the warning that the
          run_server() is defined but not used on some platforms.

Fri Feb 23 17:47:28 UTC 2007  Carlos O'Ryan  <coryan@atdesk.com>

        * tests/Bug_2815_Regression_Test.cpp:
          The test should be enabled only if the notification queue is
          also enabled.  Basically purge_pending_notifications() is not
          supported without the notification queue, and that is the
          operation we want to test.

Fri Feb 23 15:37:03 UTC 2007  Steve Huston  <shuston@riverace.com>

        * ace/OS_NS_dirent.inl (alphasort): Use a bigger hammer on the casts.

Fri Feb 23 10:50:41 UTC 2007  Olli Savia  <ops@iki.fi>
